# personal_finance_ai_advisor

./: README.md  hello.py  main.py  pyproject.toml  requirements.txt
data/: category_date_expense.csv  expense_descriptions.csv  income_expense_saving.csv  income_saving_expense.csv  monthly_expenses.csv
models/: budget_regressor.pkl  expense_classifier.pkl  expense_forecaster.pkl  income_forecaster.pkl  savings_forecaster.pkl  tfidf_vectorizer.pkl
training/: train_classifier.py  train_forecaster.py  train_regressor.py
utils/: chatbot.py  classification.py  data_processing.py  forecasting.py  learn_ratio.py  llm_assistant.py  regression.py
